# couchbase-couchdb

src/: CMakeLists.txt
src/couch_index_merger/src/: couch_view_merger.erl
src/couch_set_view/include/: couch_set_view.hrl
src/couch_set_view/src/: couch_set_view_group.erl  couch_set_view_updater.erl  couch_set_view_util.erl  mapreduce_view.erl
src/couch_upr/include/: couch_upr.hrl
src/couch_upr/src/: couch_upr_client.erl  couch_upr_fake_server.erl
src/couch_upr/test/: 04-view-groups.t
src/couchdb/: couch_file.erl
src/crc32/: CMakeLists.txt  crc32.app  crc32.erl  crc32_nif.cc
src/mapreduce/: mapreduce_nif.cc
