SET(CRC32_SRC crc32.erl)
SET(CRC32_VERSION "1.0")
SET(CRC32_PREFIX ${CMAKE_ERL_LIB_INSTALL_PREFIX}/crc32-${CRC32_VERSION})
SET(CRC32_EBIN_PREFIX ${CRC32_PREFIX}/ebin)
SET(CRC32_PRIV_PREFIX ${CRC32_PREFIX}/priv)

SET(CRC32_NIF_SRC crc32_nif.cc)

INCLUDE_DIRECTORIES(BEFORE ${Platform_SOURCE_DIR}/include
                           ${ERLANG_INCLUDE_PATH})

ADD_LIBRARY(crc32_nif MODULE ${CRC32_NIF_SRC})
SET_TARGET_PROPERTIES(crc32_nif PROPERTIES PREFIX "")

TARGET_LINK_LIBRARIES(crc32_nif platform ${COUCHBASE_UNRESOLVED})
SET_TARGET_PROPERTIES(crc32_nif PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/priv"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/priv"
)


ERL_BUILD("crc32" ${CRC32_SRC})

INSTALL(TARGETS crc32_nif
        DESTINATION ${CRC32_PRIV_PREFIX})
INSTALL(FILES ${outfiles}
              ${CMAKE_CURRENT_SOURCE_DIR}/crc32.app
        DESTINATION ${CRC32_EBIN_PREFIX})

#ADD_SUBDIRECTORY(test)
